--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Python venv files in root folder
+/bin/
+/lib64
+/pip-selfcheck.json
+/pyvenv.cfg
+/share/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
